# CHIP-8

./: .gitignore  CMakeLists.txt  platform.cpp
src/: chip8.cpp  chip8.h  main.cpp  platform.cpp  platform.h
